Added pictures for diner and transportation

--- a/src/diner.html
+++ b/src/diner.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="stylesheet" type="text/css" href="gallery.css">
+    <link rel="stylesheet" type="text/css" href="content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="../img/upeeksIcon.png" type="image/x-icon">
     <title>Home</title>
 </head>
 <body>
@@ -20,18 +22,39 @@
         <!-- Nav Menu -->
         <nav>
           <ul class="navbar">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/src/gallery.html">Gallery</a></li>
-            <li><a href="/src/about.html">About Us</a></li>
-            <li><a href="/src/contact.html">Contact Us</a></li>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/src/gallery.html">GALLERY</a></li>
+            <li><a href="/src/about.html">ABOUT US</a></li>
+            <li><a href="/src/contact.html">CONTACT US</a></li>
           </ul>
         </nav>
         
     </header>
 
+    <div class="gallery-head-title">
+        <h1>Eatery</h1>
+    </div>
+
     <!-- Main Content -->
     <main>
-
+        <div class="gallery-img">
+            <a target="_blank" href="../img/YJM_8579.JPG">
+                <figure>
+                    <img src="../img/YJM_8579.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Kalimudan Lane</div>
+        </div>
+        <div class="gallery-img">
+            <a target="_blank" href="../img/castillo.JPG">
+                <figure>
+                    <img src="../img/castillo.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Castillo Eatery</div>
+        </div>
     </main>
 
     <!-- Footer Section -->
