--- a/src/faci.html
+++ b/src/faci.html
@@ -42,7 +42,7 @@
             <a target="_blank" href="../img/e1.JPG">
                 <figure>
                     <img src="../img/e1.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">Oblation Circle</div>
@@ -52,17 +52,27 @@
             <a target="_blank" href="../img/e2.JPG">
                 <figure>
                     <img src="../img/e2.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">Admin and CHSS Building</div>
         </div>
 
         <div class="gallery-img">
+            <a target="_blank" href="../img/YJM_8691.JPG">
+                <figure>
+                    <img src="../img/YJM_8691.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">UP Road</div>
+        </div>
+
+        <div class="gallery-img">
             <a target="_blank" href="../img/YJM_8683.JPG">
                 <figure>
                     <img src="../img/YJM_8683.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>      
             </a>
             <div class="gallery-title">Admin Building (Rear View)</div>
@@ -72,7 +82,7 @@
             <a target="_blank" href="../img/YJM_8642.JPG">
                 <figure>
                     <img src="../img/YJM_8642.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">CSM Pathway</div>
@@ -82,7 +92,7 @@
             <a target="_blank" href="../img/YJM_8636.JPG">
                 <figure>
                     <img src="../img/YJM_8636.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">CSM Pathway</div>
@@ -92,7 +102,7 @@
             <a target="_blank" href="../img/YJM_8639.JPG">
                 <figure>
                     <img src="../img/YJM_8639.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">CSM Road to Parking Space</div>
@@ -102,7 +112,7 @@
             <a target="_blank" href="../img/e7.JPG">
                 <figure>
                     <img src="../img/e7.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">CSM Building</div>
@@ -112,7 +122,7 @@
             <a target="_blank" href="../img/e3.JPG">
                 <figure>
                     <img src="../img/e3.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">CSM Entrance</div>
@@ -122,10 +132,60 @@
             <a target="_blank" href="../img/e6.JPG">
                 <figure>
                     <img src="../img/e6.JPG">
-                    <figcaption>View</figcaption>
+                    <figcaption>Click to view</figcaption>
                 </figure>
             </a>
             <div class="gallery-title">Sculptures by Kublai Millan</div>
+        </div>
+
+        <div class="gallery-img">
+            <a target="_blank" href="../img/library.JPG">
+                <figure>
+                    <img src="../img/library.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">UP Mindanao Library</div>
+        </div>
+
+        <div class="gallery-img">
+            <a target="_blank" href="../img/YJM_8633.JPG">
+                <figure>
+                    <img src="../img/YJM_8633.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Road going to Sports Complex</div>
+        </div>
+
+        <div class="gallery-img">
+            <a target="_blank" href="../img/sportsx.JPG">
+                <figure>
+                    <img src="../img/sportsx.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Sports Complex</div>
+        </div>
+
+        <div class="gallery-img">
+            <a target="_blank" href="../img/e4.JPG">
+                <figure>
+                    <img src="../img/e4.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Sports Complex Entrance</div>
+        </div>
+
+        <div class="gallery-img">
+            <a target="_blank" href="../img/YJM_8612.JPG">
+                <figure>
+                    <img src="../img/YJM_8612.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Inside Sports Complex</div>
         </div>
         
     </main>
