--- a/src/gallery.html
+++ b/src/gallery.html
@@ -51,7 +51,7 @@
             <div class="diner-container">
                 <img src="../img/YJM_8579.JPG">
                 <div class="text-container2">
-                    <h1>Dining Area</h1>
+                    <h1>Dining Areas</h1>
                     <p>
                         Kalimudan Lane serves as a bustling hub within UP Mindanao, offering a variety of food options to cater to the diverse tastes of students, faculty, and visitors. Understanding the financial constraints of students, Kalimudan Lane is likely to offer budget-friendly meal options, ensuring that students have access to affordable and nutritious food
                     </p>
