fixed icon colors, linking pages in faci etc, and new tab click

--- a/src/contact.html
+++ b/src/contact.html
@@ -56,8 +56,8 @@
             <div class="conContainer">
                 <div class="contactInfo">
                     <div class="conBox">
-                        <div class="conIcons"><a href="https://www.facebook.com/profile.php?id=61554569280419"><i
-                                    class="fab fa-facebook"></i></a>
+                        <div class="conIcons"><a href="https://www.facebook.com/profile.php?id=61554569280419" target="_blank"><i
+                                    class="fab fa-facebook" ></i></a>
                         </div>
                         <div class="conText">
                             <h3>Connect with Us on Facebook!</h3>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="conBox">
-                        <div class="conIcons"><a href="https://twitter.com/U_Peeks"><i class="fab fa-twitter"></i></a></div>
+                        <div class="conIcons"><a href="https://twitter.com/U_Peeks" target="_blank"><i class="fab fa-twitter" ></i></a></div>
                         <div class="conText">
                             <h3>Follow Us on Twitter!</h3>
                             <p>Stay in the know with real-time updates, and a sneak peek into our world.
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="conBox">
-                        <div class="conIcons"><a href="https://www.instagram.com/_upeeks/"><i class="fab fa-instagram"></i></a></div>
+                        <div class="conIcons"><a href="https://www.instagram.com/_upeeks/" target="_blank"><i class="fab fa-instagram"></i></a></div>
                         <div class="conText">
                             <h3>Connect on Instagram!</h3>
                             <p>Experience the visual side of our page on Instagram. Explore stunning visuals,
