--- a/src/transpo.html
+++ b/src/transpo.html
@@ -22,10 +22,10 @@
         <!-- Nav Menu -->
         <nav>
           <ul class="navbar">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/src/gallery.html">GALLERY</a></li>
-            <li><a href="/src/about.html">ABOUT US</a></li>
-            <li><a href="/src/contact.html">CONTACT US</a></li>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../src/gallery.html">GALLERY</a></li>
+            <li><a href="../src/about.html">ABOUT US</a></li>
+            <li><a href="../src/contact.html">CONTACT US</a></li>
           </ul>
         </nav>
         
