--- a/src/diner.html
+++ b/src/diner.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="gallery.css">
     <link rel="stylesheet" type="text/css" href="content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +21,10 @@
         <!-- Nav Menu -->
         <nav>
           <ul class="navbar">
-            <li><a href="/index.html">HOME</a></li>
-            <li><a href="/src/gallery.html">GALLERY</a></li>
-            <li><a href="/src/about.html">ABOUT US</a></li>
-            <li><a href="/src/contact.html">CONTACT US</a></li>
+            <li><a href="../index.html">HOME</a></li>
+            <li><a href="../src/gallery.html">GALLERY</a></li>
+            <li><a href="../src/about.html">ABOUT US</a></li>
+            <li><a href="../src/contact.html">CONTACT US</a></li>
           </ul>
         </nav>
         
