fixed instagram link

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 Department of Mathematics, Physics and Computer Science
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>     
+                <li><a href="https://www.facebook.com/profile.php?id=61554569280419" target="_blank"><i class= "fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/up_peeks/?igsh=MWlnMHptMzMxc2J4Zg%3D%3D/" target="_blank"><i class= "fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://twitter.com/U_Peeks" target="_blank"><i class= "fa-brands fa-twitter"></i></a> </li>     
             </ul>
         </div>
         <div class="footer-bottom">
