--- a/src/about.html
+++ b/src/about.html
@@ -55,9 +55,9 @@
               community of the university.
             </p>
             <div class="social-links">
-              <a href="https://www.facebook.com/profile.php?id=61554569280419"><i class="fa-brands fa-facebook"></i></a>
-              <a href="https://www.instagram.com/_upeeks/"><i class="fa-brands fa-instagram"></i></a>
-              <a href="https://twitter.com/U_Peeks"><i class="fa-brands fa-twitter"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61554569280419" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://www.instagram.com/up_peeks/?igsh=MWlnMHptMzMxc2J4Zg%3D%3D" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://twitter.com/U_Peeks" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             </div>
             <a href="contact.html" class="btn"><b>Contact Us</b></a>
           </div>
@@ -141,9 +141,9 @@
             Department of Mathematics, Physics and Computer Science
         </p>
         <ul class="socials">
-            <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
-            <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>     
+            <li><a href="https://www.facebook.com/profile.php?id=61554569280419" target="_blank"><i class= "fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/up_peeks/?igsh=MWlnMHptMzMxc2J4Zg%3D%3D/" target="_blank"><i class= "fa-brands fa-instagram"></i></a> </li>
+            <li><a href="https://twitter.com/U_Peeks" target="_blank"><i class= "fa-brands fa-twitter"></i></a> </li>     
         </ul>
     </div>
     <div class="footer-bottom">
