--- a/src/contact.html
+++ b/src/contact.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="conBox">
-                        <div class="conIcons"><a href="https://www.instagram.com/_upeeks/" target="_blank"><i class="fab fa-instagram"></i></a></div>
+                        <div class="conIcons"><a href="https://www.instagram.com/up_peeks/?igsh=MWlnMHptMzMxc2J4Zg%3D%3D/" target="_blank"><i class="fab fa-instagram"></i></a></div>
                         <div class="conText">
                             <h3>Connect on Instagram!</h3>
                             <p>Experience the visual side of our page on Instagram. Explore stunning visuals,
@@ -119,9 +119,9 @@
                 Department of Mathematics, Physics and Computer Science
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>     
+                <li><a href="https://www.facebook.com/profile.php?id=61554569280419" target="_blank"><i class= "fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/up_peeks/?igsh=MWlnMHptMzMxc2J4Zg%3D%3D/" target="_blank"><i class= "fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://twitter.com/U_Peeks" target="_blank"><i class= "fa-brands fa-twitter"></i></a> </li>     
             </ul>
         </div>
         <div class="footer-bottom">
