added mana lydia canteen

--- a/src/diner.html
+++ b/src/diner.html
@@ -54,6 +54,15 @@
             </a>
             <div class="gallery-title">Castillo Eatery</div>
         </div>
+        <div class="gallery-img">
+            <a target="_blank" href="../img/mana.JPG">
+                <figure>
+                    <img src="../img/mana.JPG">
+                    <figcaption>Click to view</figcaption>
+                </figure>
+            </a>
+            <div class="gallery-title">Mana Lydia</div>
+        </div>
     </main>
 
     <!-- Footer Section -->
